<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66ccff"
    android:orientation="vertical" >
    
    <TextView 
        style="@style/SetupGuideTitle"
        android:text="@string/guide3"/>
    
    <TextView 
        style="@style/SetGuideUnderline"/>
    
    <TextView 
        style="@style/SetupGuideContent"
        android:text="@string/guide3_content"/>
    
    <EditText 
        android:id="@+id/et_guide_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/guide3_item1"
        android:inputType="phone"/>
    
    <Button 
        android:id="@+id/bt_guide_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide3_item2"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible"
            android:contentDescription="@string/hello_world"/>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible"
            android:contentDescription="@string/hello_world"/>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_online"
            android:contentDescription="@string/hello_world"/>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible"
            android:contentDescription="@string/hello_world"/>
        
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical">
        
        <LinearLayout 
            android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center_horizontal|center_vertical">
	        
	        <ImageView 
	            android:layout_width="150dip"
	            android:layout_height="150dip"
	            android:src="#66ccff"
	            android:contentDescription="@string/hello_world"/>
        
        </LinearLayout>
        
        <Button 
            android:id="@+id/bt_guide_pervious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pervious"
            android:drawableRight="#66ccff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"/>
        
        <Button 
            android:id="@+id/bt_guide_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:drawableRight="#66ccff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
        
    </RelativeLayout>
        
</LinearLayout>
