<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="280dip"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:text="@string/setPassword"/>
    
    <LinearLayout 
        android:layout_width="300dip"
        android:layout_height="180dip"
        android:background="#ffc8c8c8"
        android:orientation="vertical">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setPasswordDescription"/>
        
        <EditText 
            android:id="@+id/et_protected_first_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/againPassword"/>
        
        <EditText 
            android:id="@+id/et_protected_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        
        <LinearLayout 
            android:layout_width="300dip"
            android:layout_height="50dip"
            android:gravity="center"
            android:orientation="horizontal">
            
            <Button 
                android:id="@+id/bt_protected_first_yes"
                android:layout_width="140dip"
                android:layout_height="40dip"
                android:background="#66ccff"
                android:text="@string/protectedYes"/>
            
            <Button 
                android:id="@+id/bt_protected_first_no"
                android:layout_width="140dip"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:background="#66ccff"
                android:text="@string/protectedNo"/>
            
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>
