<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66ccff"
    android:orientation="vertical" >
    
    <TextView 
        style="@style/SetupGuideTitle"
        android:text="@string/guide4"/>
    
    <TextView 
        style="@style/SetGuideUnderline"/>
    
    <TextView 
        style="@style/SetupGuideContent"
        android:text="@string/guide4_content"/>
    
    <CheckBox 
        android:id="@+id/cb_guide_protected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/guide4_item1"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible"
            android:contentDescription="@string/hello_world"/>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible"
            android:contentDescription="@string/hello_world"/>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible"
            android:contentDescription="@string/hello_world"/>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_online"
            android:contentDescription="@string/hello_world"/>
        
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical">
        
        <LinearLayout 
            android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center_horizontal|center_vertical">
	        
	        <ImageView 
	            android:layout_width="150dip"
	            android:layout_height="150dip"
	            android:src="#66ccff"
	            android:contentDescription="@string/hello_world"/>
        
        </LinearLayout>
        
        <Button 
            android:id="@+id/bt_guide_pervious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pervious"
            android:drawableRight="#66ccff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"/>
        
        <Button 
            android:id="@+id/bt_guide_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:drawableRight="#66ccff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
        
    </RelativeLayout>
        
</LinearLayout>
